test/JDBC/expected/BABEL-101.out
CREATE PROCEDURE p1
AS
BEGIN TRY;
PRINT 'Hello 1'
END TRY
BEGIN CATCH;
PRINT 'Hello 2'
END CATCH;
GO

CREATE PROCEDURE p2
AS
BEGIN TRY;
PRINT 'Hello 1'
END TRY
BEGIN CATCH
PRINT 'Hello 2'
END CATCH
GO

CREATE PROCEDURE p3
AS
BEGIN TRY
PRINT 'Hello 1'
END TRY;
BEGIN CATCH
PRINT 'Hello 2'
END CATCH
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ';' at line 5 and character position 7)~~


CREATE PROCEDURE p4
AS
BEGIN TRY
PRINT 'Hello 1'
END TRY
BEGIN CATCH;
PRINT 'Hello 2'
END CATCH
GO

CREATE PROCEDURE p5
AS
BEGIN TRY
PRINT 'Hello 1'
END TRY
BEGIN CATCH
PRINT 'Hello 2'
END CATCH;
GO

CREATE PROCEDURE p6
AS
BEGIN TRY
PRINT 'Hello 1'
END TRY
BEGIN CATCH;
PRINT 'Hello 2'
END CATCH;
GO

CREATE PROCEDURE p7
AS
BEGIN TRY;
PRINT 'Hello 1'
END TRY
BEGIN CATCH;
PRINT 'Hello 2'
END CATCH
GO

DROP PROCEDURE p1
GO
DROP PROCEDURE p2
GO
DROP PROCEDURE p4
GO
DROP PROCEDURE p5
GO
DROP PROCEDURE p6
GO
DROP PROCEDURE p7
GO
